@@ -28,6 +28,7 @@
 - make yellow pages support optional.
 - modules/replicated.c: use sin6_addr.s6_addr32.
 - workaround missing GNU versionsort extension.
+- fix wildcard multi map regression.
 
 25/07/2012 autofs-5.0.7
 =======================
